# iam_decorated

./: .bazelrc  .gitignore  BUILD.bazel  README.md  WORKSPACE  package.json  tsconfig.json  tslint.json
iam-decorated-core/: BUILD
iam-decorated-core/condition/: binary.condition.operator.ts  boolean.condition.operator.ts  condition.ts  ip.address.condition.operator.ts  null.condition.operator.ts  numeric.condition.operator.ts  string.condition.operator.ts
iam-decorated-core/iam/: iam.spec.ts
iam-decorated-core/policy/: policy.generator.spec.ts
iam-decorated-core/statement/: statement.extractor.ts  statement.store.ts
iam-decorated-core/statement/test/: foo.ts
iam-decorated-serverless-example/: BUILD  bar.ts  build.ts  foo.ts  link.replacer.ts  package.json  package.spec.ts  serverless.yml
iam-decorated-serverless-plugin/: BUILD  attach.permissions.handler.spec.ts  attach.permissions.handler.ts  compile.option.ts  compile.options.ts  default.compile.options.ts  iam.plugin.ts  index.ts  package.json  required.permissions.handler.ts  required.permissions.id.ts  required.permissions.request.ts  required.permissions.response.ts
iam-decorated-serverless-plugin-example/: BUILD  bar.ts  package.json
serverless-support/: BUILD  index.ts  link.replacer.cli.ts  link.replacer.spec.ts  package.json  register.ts  replace.link.options.ts  replace.option.ts
tools/: copy.bzl  node_modules.bzl  npm_script.bzl
tools/link-replacer/: BUILD  link.replacer.ts
tools/npm/: package.bzl
